# Generated by Django 5.2.6 on 2025-09-28 13:49

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    # ('motopart', '0001_initial'),
        ('carts', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='CartItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('quantity', models.PositiveIntegerField(default=1)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('motopart', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='cart_items', to='motopart.motopart')),
                ('cart', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='carts.cart')),
            ],
            options={
                'ordering': ['-created_at'],
                'unique_together': {('cart', 'motopart')},
            },
        ),
    ]
